--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
             DPO在线评测
         </h1>
         <div style="font-size: 150%; position:absolute; right:15%">
-            已更新至hw11
+            已更新至hw14
         </div>
 
         <div id="panel1">
@@ -68,6 +68,8 @@
 
                 <!-- <input class="validate inline" id="amount" type="text" list="amountList" placeholder="每组数据输入行数"
                     value="{{amount}}" /> -->
+                <input class="validate inline" id="5" type="text" placeholder="t: [1, 5]"
+                    value="{{t}}" />
                 <input class="validate inline" id="n" type="text" placeholder="n: [1, 100]"
                     value="{{n}}" />
                 <input class="validate inline" id="m" type="text" placeholder="m: [1, 100]"
