--- a/templates/about.html
+++ b/templates/about.html
@@ -28,6 +28,10 @@
             <p class="grey-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 非常抱歉评测机由于jdk版本过高不支持pair可能导致之前部分同学RE，目前已修复
             </p>
+
+            <p class="grey-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                平台只支持java程序正确性评测，同时在每单元上线初期评测结果不一定准确
+            </p>
         </div>
 
         <div class="center-align">
