--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
 
                 <!-- <input class="validate inline" id="amount" type="text" list="amountList" placeholder="每组数据输入行数"
                     value="{{amount}}" /> -->
-                <input class="validate inline" id="5" type="text" placeholder="t: [1, 5]"
+                <input class="validate inline" id="t" type="text" placeholder="t: [1, 5]"
                     value="{{t}}" />
                 <input class="validate inline" id="n" type="text" placeholder="n: [1, 100]"
                     value="{{n}}" />
