finish all 2023hw

--- a/templates/about.html
+++ b/templates/about.html
@@ -32,6 +32,10 @@
             <p class="grey-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 平台只支持java程序正确性评测，同时在每单元上线初期评测结果不一定准确
             </p>
+
+            <p class="grey-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                修复了数据中丢完同书号所有书的BUG
+            </p>
         </div>
 
         <div class="center-align">
